update .page in css

--- a/cv-style.css
+++ b/cv-style.css
@@ -1,8 +1,13 @@
 .page {
     width: 780xp;
-    margin: auto;
+    background-color: gainsboro;
+    margin: 40px auto;
+    padding: 20px;
     font-family: 'Source sans Pro',Calibri, Tahoma, sans-serif;
     font-size: 16px;
+    border: 5px solid navy;
+    border-radius: 10px;
+    box-shadow: 2px 3px 4px navy;
 }
 .infophoto {
     height: 200px;
